[tool.poetry]
name = "todo"
version = "0.1.0"
description = "todo app backend"
authors = ["Zanfer322 <edupugantiarun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
