[tool.poetry]
name = "app"
version = "0.1.0"
description = "todo app backend"
authors = ["Zanfer322 <edupugantiarun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
bandit = "^1.6.2"
flake8 = "^3.8.4"
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
